--- a/mongodb/docker-compose.yml
+++ b/mongodb/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./mongors/data1:/data/db
       - ./rs-init.sh:/scripts/rs-init.sh
+      - ./create-user-root.sh:/scripts/create-user-root.sh
     networks:
       - mongors-network
     ports:
